--- a/app/views/quotations/_form.html.erb
+++ b/app/views/quotations/_form.html.erb
@@ -1,50 +1,46 @@
-<button type="button" class="close" data-dismiss="modal">
-  <span aria-hidden="true">&times;</span>
-</button>
-
 <%= form_with(model: @quotation, local: true, html: {autocomplete: 'off'}) do |form| %>
-  <div class="form center-div">
+  <div class="ui form">
 
-    <% if @quotation.id %>
-      <h3><%= t('editing_quotation') %></h3>
-    <% else %>
-      <h3><%= t('creating_quotation') %></h3>
-    <% end %>
+    <h2 class="centered">
+      <% if @quotation.id %>
+        <%= t('editing_quotation') %>
+      <% else %>
+        <%= t('creating_quotation') %>
+      <% end %>
+    </h2>
 
+    <div class="three fields">
 
-    <div class="form-row">
-
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
+      <div class="field">
         <%= form.label t('customer') %>
         <%= form.collection_select :customer_id, Customer.all, :id, :name, {:include_blank => true}, {required: true, class: 'form-control', id: 'quotation_form_customer'} %>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
+      <div class="field">
         <%= form.label t('status') %>
-        <%= form.select(:status, Quotation.translated_statuses.map {|status| [status[0], status[1]]}, {}, {class: 'form-control', id: "quotation_status", autocomplete: 'nope'}) %>
+        <%= form.select(:status, Quotation.translated_statuses.map { |status| [status[0], status[1]] }, {}, {class: 'form-control', id: "quotation_status", autocomplete: 'nope'}) %>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
+      <div class="field">
         <%= form.label t('date_locale') %>
         <div class="picker-container">
           <%= form.text_field :date, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", value: @quotation.date ? l(@quotation.date) : Time.zone.now.to_date.strftime("%d/%m/%Y"), autocomplete: 'off', id: "dateProject", class: "form-control" %>
         </div>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
-        <%= form.label t('project') %>
-        <%= form.select(:project_id, Project.where(status: :quotation)
-            .collect {|project| [project.name, project.id, {customer: project.customer.id}]}, {:include_blank => true}, {class: 'form-control', id: 'edit_quotation_projects', autocomplete: 'nope', :multiple => false}) %>
-      </div>
-
     </div>
 
-    <div class="form-row">
+    <div class="field">
 
-      <div class="col-12 createButton">
-        <%= form.submit t('create'), :class => "btn btn-dark form-group" %>
+      <div class="centered">
+        <%= form.submit t('create'), :class => "ui green button" %>
       </div>
-
     </div>
   </div>
 <% end %>
+
+<div class="close">
+  <button class="ui red button" onclick="$('.ui.modal').modal('hide');">
+    Annuler
+  </button>
+</div>
