--- a/app/views/quotations/show.html.erb
+++ b/app/views/quotations/show.html.erb
@@ -2,7 +2,7 @@
   <div id="container">
     <section id="memo">
       <div class="logo">
-        <%= wicked_pdf_image_tag "logo_greday.png" %>
+        <%= wicked_pdf_image_tag "plusview.png" %>
       </div>
 
       <div class="company-info">
@@ -25,23 +25,23 @@
     <section id="client-info">
       <div>
         <span>
-          <%= @quotation.customer.name %>
+          <%= @project.customer.name %>
         </span>
       </div>
       <div>
         <span>
-          <%= @quotation.customer.street + ', ' + @quotation.customer.number.to_s %>
+          <%= @project.customer.street + ', ' + @project.customer.number.to_s %>
         </span>
       </div>
       <div>
         <span>
-          <%= @quotation.customer.cp.to_s + ' ' + @quotation.customer.locality %>
+          <%= @project.customer.cp.to_s + ' ' + @project.customer.locality %>
         </span>
       </div>
       <div>
-        <% if @quotation.customer.tva_record %>
+        <% if @project.customer.tva_record %>
         <span>
-          <%= "TVA : " + @quotation.customer.tva_record %>
+          <%= "TVA : " + @project.customer.tva_record %>
         </span>
         <% end %>
       </div>
@@ -53,7 +53,7 @@
       <div class="clearfix"></div>
       <span id="quotation-number">
       <h2>
-          <%= '#' + @quotation.id.to_s %>
+          <%= '#' + @project.id.to_s %>
       </h2>
       </span>
       <div class="clearfix"></div>
@@ -62,84 +62,14 @@
 
     <div class="clearfix"></div>
     <span id="dateInvoice">
-          <%= "Wonck le, " + l(@quotation.date).to_s %>
+          <%= "Wonck le, " + l(@project.date).to_s %>
     </span>
     <hr>
 
-    <% if @quotation.project %>
+    <% if @project %>
       <section id="items" class="project">
         <div class="avoidbreak">
-
-          <div class="title-project-container">
-            <h4 class="title-project">Projet #<%= @quotation.project.id %> : <%= @quotation.project.name %></h4>
-          </div>
-          <p><%= @quotation.project.description %></p>
-          <% if @quotation.project.services.any? %>
-            <h5>Prestations</h5>
-
-            <table class="table table-hover table-striped avoidbreak">
-              <thead class=thead-dark>
-              <tr>
-                <th class="name-cell"><%= t('Name') %></th>
-                <th class="quantity-cell"><%= t('duration') %></th>
-                <th class="number-cell"><%= t('hourly_rate') + ' (€)' %></th>
-                <th class="number-cell"><%= t('tva_rate') + ' (%)' %></th>
-                <th class="number-cell"><%= t('total_gross') + ' (€)' %></th>
-              </tr>
-              </thead>
-
-              <tbody>
-              <% @quotation.project.services.each do |service| %>
-                <tr>
-                  <td class="name-cell"><%= service.name %></td>
-                  <td class="quantity-cell"><%= service.duration.strftime('%H:%M') %></td>
-                  <td class="number-cell"><%= number_with_precision service.hourly_rate, :precision => 2 %></td>
-                  <td class="number-cell"><%= number_with_precision service.tva_rate, :precision => 2 %></td>
-                  <td class="number-cell"><%= number_with_precision service.total_gross, :precision => 2 %></td>
-                </tr>
-              <% end %>
-              </tbody>
-            </table>
-          <% end %>
-        </div>
-        <div class="avoidbreak">
-          <% if @quotation.project.wares.any? %>
-            <h5>Marchandises</h5>
-
-            <table class="table table-hover table-striped">
-              <thead class=thead-dark>
-              <tr>
-                <th class="name-cell"><%= t('ware_name') %></th>
-                <th class="quantity-cell"><%= t('Quantity') %></th>
-                <th class="number-cell"><%= t('sell_price') + ' (€)' %></th>
-                <th class="number-cell"><%= t('tva_rate') + ' (%)' %></th>
-                <th class="number-cell"><%= t('total_gross') + ' (€)' %></th>
-              </tr>
-              </thead>
-
-              <tbody>
-              <% @quotation.project.wares.each do |ware| %>
-                <tr>
-                  <td class="name-cell"><%= ware.ware_name %></td>
-                  <td class="quantity-cell"><%= ware.quantity %></td>
-                  <td class="number-cell"><%= number_with_precision ware.sell_price, :precision => 2 %></td>
-                  <td class="number-cell"><%= number_with_precision ware.tva_rate, :precision => 2 %></td>
-                  <td class="number-cell"><%= number_with_precision ware.total_gross, :precision => 2 %></td>
-                </tr>
-                <% if ware.show_desc_quot %>
-                  <tr>
-                    <td colspan="5">
-                      <%= simple_format(ware.comment) %>
-                    </td>
-                  </tr>
-                <% end %>
-              <% end %>
-              </tbody>
-            </table>
-          <% end %>
-        </div>
-        <div class="avoidbreak">
-          <% if @quotation.project.project_extra_lines.any? %>
+          <% if @project.project_extra_lines.any? %>
             <h5><%= t('extra').pluralize %>
             </h5>
 
@@ -155,12 +85,12 @@
               </thead>
 
               <tbody>
-              <% unless @quotation.project.project_extra_lines.any? %>
+              <% unless @project.project_extra_lines.any? %>
                 <tr>
                   <td class="emptyTable" colspan="9">Aucune données à afficher</td>
                 </tr>
               <% end %>
-              <% @quotation.project.project_extra_lines.each do |project_extra_line| %>
+              <% @project.project_extra_lines.each do |project_extra_line| %>
                 <tr>
                   <td class="name-cell"><%= project_extra_line.extra.name %></td>
                   <td class="quantity-cell"><%= project_extra_line.quantity.to_s + ' ' + project_extra_line.extra.unit %></td>
@@ -182,16 +112,16 @@
       <table>
         <tr class="amount-total">
           <th>TOTAL HT (€)</th>
-          <td><%= number_with_precision @quotation.total_gross, :precision => 2 %></td>
+          <td><%= number_with_precision @project.total_gross, :precision => 2 %></td>
         </tr>
         <tr data-hide-on-quote="true">
           <th>Total TVA (€)</th>
           <td><%= # noinspection RubyArgumentParentheses
-                  number_with_precision (@quotation.total - @quotation.total_gross), :precision => 2 %></td>
+                  number_with_precision (@project.total - @project.total_gross), :precision => 2 %></td>
         </tr>
         <tr data-hide-on-quote="true">
           <th>TOTAL TTC (€)</th>
-          <td><%= number_with_precision @quotation.total, :precision => 2 %></td>
+          <td><%= number_with_precision @project.total, :precision => 2 %></td>
         </tr>
       </table>
       <div class="clearfix"></div>
