--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,33 +1,18 @@
-<div class="header-project">
-  <table>
-    <tr>
-      <td>
-        <%= link_to t('create_new_invoice'), new_invoice_path, {class: 'btn btn-success', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
-      </td>
-      <td>
-        <h2 id="titleBadge" display=<%= controller_name %>>
-          <%= t(controller_name).to_s %>
-        </h2>
-      </td>
-      <td>
-      </td>
-    </tr>
-  </table>
-</div>
-<hr>
 <%= search_form_for @search do |form| %>
-  <div class="form">
-    <div class="row">
-      <h5> <%= form.label t('filtres') %> </h5>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+  <div class="ui form">
+    <div class="four fields">
+      <div class="two wide field add-button">
+        <%= link_to t('create_new_invoice'), new_invoice_path, {class: 'ui teal button', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+      </div>
+      <div class="field">
         <%= form.label t('project') %>
         <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_sort', onchange: 'this.form.submit();'} %>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="field">
         <%= form.label t('customer') %>
         <%= form.collection_select :customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_sort', onchange: 'this.form.submit();'} %>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="field">
         <%= form.label t('status') %>
         <%= form.select :status_eq, Invoice.statuses.map {|status| [t(status[0]), status[1].to_i, {status: status[0]}]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
       </div>
@@ -35,7 +20,7 @@
   </div>
 <% end %>
 
-<table class="table table-to-color">
+<table class="ui striped selectable teal table table-to-color">
   <thead class=thead-dark>
   <tr>
     <th>
@@ -44,10 +29,10 @@
     <th>
       <%= sort_link(@search, :customer_id, t('customer')) %>
     </th>
-    <th class="center-cell">
+    <th class="center aligned">
       <%= sort_link(@search, :date, t('date_locale')) %>
     </th>
-    <th class="center-cell">
+    <th class="center aligned">
       <%= sort_link(@search, :status, t('status')) %>
     </th>
     <th>
@@ -73,13 +58,17 @@
       <td>
         <%= invoice.customer ? invoice.customer.name : '' %>
       </td>
-      <td class="center-cell"><%= l(invoice.date) %></td>
-      <%= tag.td class: 'center-cell', id: 'status-cell', status: invoice.status do %>
-        <%= invoice.translated_status %>
+      <td class="center aligned">
+        <%= l(invoice.date) %>
+      </td>
+      <%= tag.td class: 'center aligned status-cell', status: invoice.status do %>
+        <div>
+          <%= invoice.translated_status %>
+        </div>
       <% end %>
       <td><%= number_with_precision invoice.total_gross, :precision => 2 %></td>
       <td><%= number_with_precision invoice.total, :precision => 2 %></td>
-      <td class="center-cell">
+      <td class="center aligned">
         <%= link_to edit_invoice_path(invoice), remote: true do %>
           <%= image_tag("edit-icon.png", size: "30x30") %>
         <% end %>
