--- a/app/views/quotations/index.html.erb
+++ b/app/views/quotations/index.html.erb
@@ -1,56 +1,41 @@
-<div class="header-project">
-  <table>
-    <tr>
-      <td>
-        <%= link_to t('create_new_quotation'), new_quotation_path, {class: 'btn btn-success', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
-      </td>
-      <td>
-        <h2 id="titleBadge" display=<%= controller_name %>>
-          <%= t(controller_name).to_s %>
-        </h2>
-      </td>
-      <td>
-      </td>
-    </tr>
-  </table>
-</div>
-<hr>
 <%= search_form_for @search do |form| %>
-  <div class="form">
-    <div class="row">
-      <h5> <%= form.label t('filtres') %> </h5>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+  <div class="ui form">
+    <div class="four fields">
+      <div class="two wide field add-button">
+        <%= link_to t('create_new_quotation'), new_quotation_path, {class: 'ui teal button', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+      </div>
+      <div class="field">
         <%= form.label t('project') %>
         <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_sort', onchange: 'this.form.submit();'} %>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="field">
         <%= form.label t('customer') %>
         <%= form.collection_select :customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_sort', onchange: 'this.form.submit();'} %>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="field">
         <%= form.label t('status') %>
-        <%= form.select :status_eq, Quotation.statuses.map {|status| [t(status[0]), status[1].to_i, {status: status[0]}]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
+        <%= form.select :status_eq, Quotation.statuses.map { |status| [t(status[0]), status[1].to_i, {status: status[0]}] }, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
       </div>
     </div>
   </div>
 <% end %>
 
-<table class="table table-to-color">
+<table class="ui striped selectable teal table table-to-color">
   <thead class=thead-dark>
   <tr>
     <th>
       <%= sort_link(@search, :customer_id, t('customer')) %>
     </th>
-    <th class="center-cell">
+    <th class="center aligned">
       <%= sort_link(@search, :date, t('date_locale')) %>
     </th>
-    <th class="center-cell">
+    <th class="center aligned">
       <%= sort_link(@search, :status, t('status')) %>
     </th>
-    <th class="right-cell">
+    <th class="right aligned">
       <%= sort_link(@search, :total_gross, t('gross_cost').to_s + ' (€)') %>
     </th>
-    <th class="right-cell">
+    <th class="right aligned">
       <%= sort_link(@search, :total, t('total').to_s + ' (€)') %>
     </th>
     <th></th>
@@ -63,37 +48,46 @@
     </tr>
   <% end %>
   <% @quotations.each do |quotation| %>
-    <tr>
-      <td>
-        <%= quotation.customer ? quotation.customer.name : '' %>
-      </td>
-      <td  class="center-cell"> <%= quotation.date ? l(quotation.date) : "" %></td>
-      <%= tag.td class: 'center-cell', id: 'status-cell', status: quotation.status do %>
+    <% if quotation.project %>
+      <tr data-link="<%= project_path(quotation.project) %>">
+    <% else %>
+      <tr>
+    <% end %>
+    <td>
+      <%= quotation.customer ? quotation.customer.name : '' %>
+    </td>
+    <td class="center aligned">
+      <%= quotation.date ? l(quotation.date) : "" %>
+    </td>
+    <%= tag.td class: 'center aligned status-cell', status: quotation.status do %>
+      <div>
         <%= quotation.translated_status %>
+      </div>
+    <% end %>
+    <td class="right aligned">
+      <%= number_with_precision quotation.total_gross, :precision => 2 %>
+    </td>
+    <td class="right aligned">
+      <%= number_with_precision quotation.total, :precision => 2 %>
+    </td>
+    <td class="center aligned">
+      <%= link_to edit_quotation_path(quotation), remote: true do %>
+        <%= image_tag("edit-icon.png", size: "30x30") %>
       <% end %>
-      <td class="right-cell"><%= number_with_precision quotation.total_gross, :precision => 2 %></td>
-      <td class="right-cell"><%= number_with_precision quotation.total, :precision => 2 %></td>
-      <td class="center-cell">
-        <%= link_to edit_quotation_path(quotation), remote: true do %>
-          <%= image_tag("edit-icon.png", size: "30x30") %>
-        <% end %>
-        <%= link_to image_tag("pdf-icon.png", size: "30x30"), quotation_path(quotation.id, :format => :pdf) %>
-        <%= link_to quotation, method: :delete, data: {confirm: t('confirm_delete')} do %>
-          <%= image_tag("delete-icon.png", size: "30x30") %>
-        <% end %>
-      </td>
+      <%= link_to image_tag("pdf-icon.png", size: "30x30"), quotation_path(quotation.id, :format => :pdf) %>
+      <%= link_to quotation, method: :delete, data: {confirm: t('confirm_delete')} do %>
+        <%= image_tag("delete-icon.png", size: "30x30") %>
+      <% end %>
+    </td>
     </tr>
   <% end %>
   </tbody>
 </table>
 <br>
-<div class="flickr_pagination">
-  <%= will_paginate @quotations %>
-</div>
+<%= will_paginate @quotations %>
 
-<div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-    <div class="modal-content">
-    </div>
+<div id="modal-window" class="ui modal">
+  <div class="content">
   </div>
 </div>
+
