--- a/app/views/extras/_form.html.erb
+++ b/app/views/extras/_form.html.erb
@@ -1,51 +1,50 @@
-<button type="button" class="close" data-dismiss="modal">
-  <span aria-hidden="true">&times;</span>
-</button>
+<div class="close">
+  <i class="big close icon" onclick="$('.ui.modal').modal('hide');"></i>
+</div>
 
 <%= form_with(model: @extra, local: true) do |form| %>
-  <div class="form center-div">
+  <div class="ui form">
 
-    <% if @extra.id %>
-      <h3><%= t('editing_extra') %></h3>
-    <% else %>
-      <h3><%= t('creating_extra') %></h3>
-    <% end %>
+    <h2 class="centered">
+      <% if @extra.id %>
+        <%= t('editing_extra') %>
+      <% else %>
+        <%= t('creating_extra') %>
+      <% end %>
+    </h2>
 
-    <div class="form-row">
-
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-6 col-xl-6">
+    <div class="two fields">
+      <div class="field">
         <%= form.label t('ware_name') %>
         <%= form.text_field :name, class: "form-control", onkeyup: "javascript:capitalize(this.id, this.value);" %>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+      <div class="field">
         <%= form.label t('category') %>
         <%= form.select :category, Extra.distinct.pluck(:category), {:include_blank => true}, {required: true, class: 'form-control', onkeyup: "javascript:capitalize(this.id, this.value);", id: 'extra_form_category'} %>
       </div>
     </div>
-    <div class="form-row">
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
+    <div class="three fields">
+      <div class="field">
         <%= form.label t('unit') %>
         <%= form.text_field :unit, class: "form-control" %>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
+      <div class="field">
         <%= form.label t('unit_price') %>
         <%= form.text_field :unit_price, class: "form-control" %>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
+      <div class="field">
         <%= form.label t('tva_rate') %>
         <%= form.text_field :tva_rate, class: "form-control" %>
       </div>
     </div>
 
-    <div class="form-row">
-      <div class="col-12 createButton">
-        <%= form.submit t('create'),
-                        :class => "btn btn-dark form-group" %>
-      </div>
+    <div class="field">
+      <%= form.submit t('create'),
+                      :class => "ui green button" %>
     </div>
   </div>
 <% end %>
