--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -86,9 +86,7 @@
   <%= will_paginate @invoices %>
 </div>
 
-<div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-    <div class="modal-content">
-    </div>
+<div id="modal-window" class="ui modal">
+  <div class="content">
   </div>
 </div>
