--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -17,15 +17,13 @@
     <div class="three fields">
 
       <div class="field">
-        <%= form.label t('date_locale') %>
-        <div class="picker-container">
-          <%= form.text_field :date, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", value: @payment.date ? l(@payment.date) : Time.zone.now.to_date.strftime("%d/%m/%Y"), autocomplete: 'off', id: "dateProject", class: "form-control" %>
-        </div>
+        <%= form.label t('customer') %>
+        <%= form.collection_select :customer_id, Customer.all, :id, :name, {:include_blank => true}, {required: true, id: 'payment_form_customer'} %>
       </div>
 
       <div class="field">
-        <%= form.label t('customer') %>
-        <%= form.collection_select :customer_id, Customer.all, :id, :name, {:include_blank => true}, {required: true, class: 'form-control', id: 'customer_select_invoice'} %>
+        <%= form.label t('date_locale') %>
+          <%= form.text_field :date, value: @payment.date ? l(@payment.date) : Time.zone.now.to_date.strftime("%d/%m/%Y"), id: "dateProject" %>
       </div>
 
       <div class="field">
@@ -36,21 +34,19 @@
       </div>
     </div>
 
-    <div class="three fields">
-
-      <div class="field">
-        <%= form.label t('invoice').pluralize %>
-        <% if @payment.id %>
-          <%= form.select(:invoice_ids, Invoice.where(status: :created)
-              .or(Invoice.where(payment_id: @payment.id))
-              .collect {|invoice| [invoice.display_number.to_s + ": " + invoice.customer.name + ' - ' + invoice.total.to_s + ' €' + ' - ' + l(invoice.date).to_s, invoice.id, {invoice: invoice.customer.id}]}, {}, {class: 'form-control', id: 'select_invoices_payment', autocomplete: 'nope', :multiple => true}) %>
-        <% else %>
-          <%= form.select(:invoice_ids, Invoice.where(status: :created)
-              .collect {|invoice| [invoice.display_number.to_s + ": " + invoice.customer.name + ' - ' + invoice.total.to_s + ' €' + ' - ' + l(invoice.date).to_s, invoice.id, {invoice: invoice.customer.id}]}, {}, {class: 'form-control', id: 'select_invoices_payment', autocomplete: 'nope', :multiple => true}) %>
-        <% end %>
-      </div>
-    </div>
     <div class="field">
+      <%= form.label t('invoice').pluralize %>
+      <% if @payment.id %>
+        <%= form.select(:invoice_ids, Invoice.where(status: :created)
+            .or(Invoice.where(payment_id: @payment.id))
+            .collect {|invoice| [invoice.display_number.to_s + ": " + invoice.customer.name + ' - ' + invoice.total.to_s + ' €' + ' - ' + l(invoice.date).to_s, invoice.id, {invoice: invoice.customer.id}]}, {}, {class: 'form-control', id: 'select_invoices_payment', autocomplete: 'nope', :multiple => true}) %>
+      <% else %>
+        <%= form.select(:invoice_ids, Invoice.where(status: :created)
+            .collect {|invoice| [invoice.display_number.to_s + ": " + invoice.customer.name + ' - ' + invoice.total.to_s + ' €' + ' - ' + l(invoice.date).to_s, invoice.id, {invoice: invoice.customer.id}]}, {}, {class: 'form-control', id: 'select_invoices_payment', autocomplete: 'nope', :multiple => true}) %>
+      <% end %>
+    </div>
+
+    <div class="field centered">
       <%= form.submit t('create'), :class => "ui green button" %>
     </div>
   </div>
